# misis2024s-23-18-ryzhichkin-k-s

./: .gitignore  CMakeLists.txt  README.md  codeforces.id  reports.md  status.md
bin.dbg/: test_complex.ilk  test_dynarr.ilk  test_numbertheory.ilk  test_rational.ilk  test_stackarr.ilk  test_stacklst.ilk
prj.cw/: CMakeLists.txt  readme.md
prj.cw/extra/: table_generator.py  toc_parser.py
prj.cw/latex/: main.tex  table_generator.py
prj.cw/numbertheory/: CMakeLists.txt  all_about.cpp  numbertheory.hpp
prj.cw/numbertheory/chapter_1/: divisors.cpp  euclide.cpp  prime_power_in_factorial.cpp  sieve_of_eratosthenes.cpp
prj.cw/numbertheory/chapter_2/: check_sum_of_squares.cpp  euler_func.cpp  linear_congruences.cpp  modpow.cpp
prj.cw/numbertheory/chapter_3/: fib.cpp
prj.cw/numbertheory/chapter_4/: primitive_roots.cpp  quadratic_residue.cpp  square_free.cpp
prj.cw/numbertheory/chapter_5/: easy_factorize.cpp  rho_pollard.cpp
prj.cw/numbertheory/chapter_6/: bpsw.cpp  fermat.cpp  frobenius.cpp  millerrabin.cpp  prime_tests.cpp  sqrt_test.cpp
prj.cw/numbertheory/other/: all_about.cpp  chinese_remainder_theorem_result.hpp  diophantus_result.hpp  extended_euclidean_result.hpp
prj.lab/: CMakeLists.txt
prj.lab/bitset/: bitset.cpp  bitset.hpp
prj.lab/complex/: CMakeLists.txt  complex.cpp  complex.hpp
prj.test/: CMakeLists.txt  test_bitset.cpp  test_complex.cpp  test_dynarr.cpp  test_numbertheory.cpp  test_queuearr.cpp  test_queuelst.cpp  test_queuelstpr.cpp  test_queuelstspr.cpp  test_rational.cpp  test_stackarr.cpp  test_stacklst.cpp
(+22 files in other folders)
